packages/build/tests/error/plugin_load/fixtures/early_exit/plugin.js
const { exit } = require('process')

module.exports = {
  name: 'netlify-plugin-test',
  onPreBuild() {
    console.log('onPreBuild')
    setTimeout(() => {
      exit()
    }, 0)
  },
  onPostBuild() {
    console.log('onPostBuild')
  },
}
